...
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="J2k-6r-DkE"/>
                                    <constraint firstAttribute="width" constant="48" id="gKi-X2-fZC"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" image="Backward"/>
                                <connections>
                                    <action selector="didTapBackButton" destination="9CO-4u-qUX" eventType="touchUpInside" id="7x4-W2-n0J"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YBM-uk-yfa" userLabel="didTapShareButton">
                                <rect key="frame" x="176" y="807" width="50" height="50"/>
...
                                    <constraint firstAttribute="width" constant="60" id="qo9-qp-rLO"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lf5-zG-BkH">
                                <rect key="frame" x="16" y="702" width="370" height="48"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="oqv-dD-cYl"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                <state key="normal" title="Войти">
...
                                                            <rect key="frame" x="326" y="0.0" width="44" height="44"/>
                                                            <accessibility key="accessibilityConfiguration" identifier="LikeButton"/>
                                                            <constraints>
                                                                <constraint firstAttribute="height" constant="44" id="7bJ-LF-Nqp"/>
                                                                <constraint firstAttribute="width" constant="44" id="eDl-Ek-syX"/>
                                                            </constraints>
                                                            <buttonConfiguration key="configuration" style="plain" image="No Active"/>
                                                            <connections>
                                                                <action selector="likeButtonClicked:" destination="aSd-Md-cv3" eventType="touchUpInside" id="kwk-Y4-RM3"/>
                                                            </connections>
                                                        </button>
                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0Ii-8G-c84">
                                                            <rect key="frame" x="0.0" y="162" width="370" height="30"/>
...
